# fg-vector-sampler

./: .flake8  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  config.json  pyproject.toml  run_sampling.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  tests.yml
docs/: api.rst  architecture.rst  citation.rst  conf.py  contributing.rst  getting_started.rst  index.rst
examples/: example_workflow.py  run_toy_sampling.py
fg_vector_sampler/: __init__.py  analysis.py  audit.py  cli.py  core.py  features.py  io.py  molecule_lib.py  postprocess.py  priors.py  sampler.py
monomer/: PT_conf_001.xyz  PT_conf_002.xyz  PT_conf_003.xyz  PT_conf_004.xyz  PT_conf_005.xyz  PT_conf_006.xyz  PT_conf_007.xyz  PT_conf_008.xyz  PT_conf_009.xyz  PT_conf_010.xyz  opt-HNO3-B97-3c.xyz  opt-NO-B97-3c.xyz  opt-NO2-B97-3c.xyz  opt-SO2-B97-3c.xyz  opt-cisSA-B97-3c.xyz  opt-transSA-B97-3c.xyz
scripts/: audit_feature_coverage.py  clean_workspace.ps1  clean_workspace.sh
tests/: test_audit.py  test_directionality.py  test_package_metadata.py  test_provenance.py
