[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fg-vector-sampler"
version = "0.1.0"
description = "Energy-free COM-anchored functional-group vector sampler for molecular cluster pre-sampling"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "networkx>=3.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fg_vector_sampler*"]
